deployment/app/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snake-ladder-api
  namespace: app
  labels:
    app: snake-ladder-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: snake-ladder-api
  template:
    metadata:
      labels:
        app: snake-ladder-api
    spec:
      containers:
        - name: snake-ladder-api
          image: amitauddy/snake-and-ladder:1.0
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /docs
              port: 8080
            initialDelaySeconds: 15
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /docs
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 20
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: snake-ladder-api-svc
  namespace: app
spec:
#  type: NodePort
  selector:
    app: snake-ladder-api
  ports:
    - name: http
      protocol: TCP
      targetPort: 8080
      port: 8080
  sessionAffinity: ClientIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snake-ladder-api
  namespace: app
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: snake-ladder-api.traefik.k8s
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: snake-ladder-api-svc
              port:
                number: 8080
